--- a/section3.tex
+++ b/section3.tex
@@ -2311,7 +2311,7 @@ $\Rightarrow$ Exponentielle Konvergenz, aber schlechtere Exponenten für größe
 	\end{itemize}
 \end{bem}
 
-\begin{satz}[Beziehung zur Bestapproximation] \beginwithlist
+\begin{satz}[Beziehung zur Bestapproximation] \beginwithlist \label{3.60}
 	\begin{enumerate}
 		\item Für den dualen Fehler gilt
 			\[
@@ -2346,7 +2346,7 @@ $\Rightarrow$ Exponentielle Konvergenz, aber schlechtere Exponenten für größe
 In a-priori-Schranke \eqref{eq:3.26} sehen wir den ``multiplikativen Effekt'', somit ist $s_N'$ tatsächlich gute Schätzung und es besteht die Hoffnung dies durch a-posteriori Schranken zu verifizieren.
 Zunächst ganz analog zu primalem Problem eine a-posteriori Schranke für dualen Fehler:
 
-\begin{satz}[Duale a-posteriori Fehlerschranke \& Effektivitätsschranke] \beginwithlist
+\begin{satz}[Duale a-posteriori Fehlerschranke \& Effektivitätsschranke] \beginwithlist \label{3.61}
 	\begin{enumerate}
 		\item
 			\[
@@ -2365,7 +2365,7 @@ Zunächst ganz analog zu primalem Problem eine a-posteriori Schranke für dualen
 
 Damit folgt gewünschte Schranke für Ausgabefehler:
 
-\begin{satz}[Primal-dualer Ausgabefehlerschätzer]
+\begin{satz}[Primal-dualer Ausgabefehlerschätzer] \label{3.62}
 	Für alle $\mu$ gilt
 	\[
 		|s(\mu)-s_N'(\mu)| \leq \Delta_{N,s}'(\mu) := \frac{\norm{r(\mu)}_{X'} \cdot \norm{r^\du(\mu)}_{X'}}{\alpha_{LB}(\mu)}
