--- a/skript.tex
+++ b/skript.tex
@@ -32,5 +32,9 @@
 \input{section3.tex}
 \newpage
 \input{section4.tex}
+\newpage
+\input{section5.tex}
+\newpage
+\input{section6.tex}
  
 \end{document}
